# rlib-cpp-template

./: CMakeLists.txt  README.md  build.sh
src/: CMakeLists.txt
src/private/: Game.cpp
